<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="@string/login_fragmant"
    tools:context=".views.LoginFragment">

    <TextView
        android:id="@+id/tv_login_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_in"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/heading"
        />

    <TextView
        android:id="@+id/tv_sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_into_registerd_account"
        app:layout_constraintTop_toBottomOf="@id/tv_login_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/sub_heading"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/nunito_bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_heading"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/heading"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="48dp"
        android:hint="@string/enter_your_email"
        android:background="@drawable/input_text_backgrounf"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_medium"
        android:drawableStart="@drawable/round_email_24"
        android:drawableTint="@color/sub_heading"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/valid_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Please enter a valid email address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:textColor="@color/red"
        android:textSize="11sp"
        android:fontFamily="@font/nunito_light"
        android:layout_marginStart="20dp"

        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        android:textSize="16sp"
        android:textColor="@color/heading"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="48dp"
        android:hint="@string/enter_your_password"
        android:background="@drawable/input_text_backgrounf"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_medium"
        android:drawableStart="@drawable/round_password_24"
        android:drawableTint="@color/sub_heading"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/nunito_medium"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:gravity="end"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/tv_signin_othermethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_using_other_method"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/sub_heading"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_social"
        android:textColor="@color/heading"
        app:layout_constraintTop_toBottomOf="@id/tv_signin_othermethod"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_social"
        android:textColor="@color/heading"
        app:layout_constraintTop_toBottomOf="@id/btn_login_with_google"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_with_facebook"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/btn_login_with_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_medium"
        android:textColor="@color/sub_heading"
        android:gravity="center"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>